--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -3,7 +3,7 @@
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
           <h3>Educación
-            <a href="#top"><button type="button" class="btn btn-close-white" ><i class="fa-solid fa-arrow-turn-up"></i></button></a>
+            <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
           </h3>
             </div>              
             <div class="d-flex col-auto mt-2">
@@ -22,7 +22,7 @@
         </div>
         <div class="col-1 p-0">
             <!-- Button trigger modal --> 
-            <button type="submit" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#educacionModal" class="btn btn-close-white"><i class="fa-solid fa-pencil" (click)="idEdit(estudio.id)"></i></button>
+            <button type="submit" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#educacionModal" class="btn btn-close-white"><i class="fa-solid fa-pencil" routerLink="editEducacion/{{estudio.id}}"></i></button>
             
             <button type="submit" *ngIf="isLogged" class="btn btn-close-white" (click)="delete(estudio.id)"><i class="fa-solid fa-trash-can"></i></button>                
         </div>
@@ -30,8 +30,5 @@
       </div>
       
     </div>
-  </section> 
-  <div *ngIf="isTrue">
-    <app-modal-educacion ></app-modal-educacion>
-  </div>
+  </section>  
   <app-modal-educacion-add></app-modal-educacion-add>
