--- a/src/app/components/nabvar/nabvar.component.html
+++ b/src/app/components/nabvar/nabvar.component.html
@@ -7,15 +7,19 @@
     <!--redes y login   -->
     <div>    
       <ul class="navbar-nav"> 
-      <li class="nav-item">
-        <a class="nav-link text-white" href="https://www.linkedin.com/in/heber-caleb-cuevas-1508bb224/" target="_blank"><i class="fa-brands fa-linkedin fa-xl"></i></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="https://github.com/BelacdowN" target="_blank"><i class="fa-brands fa-github fa-xl"></i></a>
-      </li> 
+        <div *ngFor="let red of redes">      
+          <li class="nav-item">
+            <a class="nav-link text-white ico" [href]="red.url" target="_blank"><i [ngClass]="red.icono"></i></a>
+          </li>        
+        </div>
+        <li>          
+          <button type="submit" *ngIf="isLogged" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#RedesModalAdd"><i class="fa-solid fa-plus"></i></button>
+        </li>
       <app-login *ngIf="!isLogged"></app-login>
       <app-logout *ngIf="isLogged"></app-logout>      
     </ul>
     </div>
   </div>
 </nav>
+<app-modal-red-add></app-modal-red-add>
+
