--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -3,31 +3,33 @@
       <div class="row mb-2">
         <div class="col-auto me-auto mt-2">
           <h3>Proyectos
-            <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
+            <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up" ></i></button></a>
           </h3>
             </div>              
             <div class="d-flex col-auto mt-2">          
          <button type="submit" *ngIf="isLogged" class="btn btn-close-white" data-bs-toggle="modal" data-bs-target="#proyectosModalAdd"><i class="fa-solid fa-plus"></i></button>
         </div>
       </div>
-      <div class="row">
+      <div class="row" *ngFor="let proyecto of proyectos">
         <div class="col-3">
-          <img src="assets/img/APLogo.png" class="rounded-circle w-25" alt="logoFCEFyN"> <br>
-          <h5>Armado de Login</h5>
-          <h6>01-08-2022 13-01-2023</h6>
+          <a [href]="proyecto.url" target="_blank"><img [src]="proyecto.imagen" class="rounded-circle w-25 imgExp"  [alt]="proyecto.proyecto"></a> <br>
+          <h5>{{proyecto.proyecto}}</h5>
+          <h6>{{proyecto.inicio | date:"dd-MM-yyyy"}} {{proyecto.fin  | date:"dd-MM-yyyy"}}</h6>
         </div>
         <div class="col-8">
-          <h4>Armado de login con campos y detalles sugeridos en trabajo práctico Argentina Programa</h4>
+          <h4>{{proyecto.descripcion}}</h4>
         </div>
-        <div class="col-1 p-0"> 
-<!-- Button trigger modal --> 
-<button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#proyectosModal" class="btn btn-close-white"><i class="fa-solid fa-pencil"></i></button>
-<button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+        <div class="col-1 p-0">
+            <!-- Button trigger modal --> 
+            <button type="submit" *ngIf="isLogged" class="btn btn-close-white" routerLink="editProyecto/{{proyecto.id}}"><i class="fa-solid fa-pencil" ></i></button>
+            
+            <button type="submit" *ngIf="isLogged" class="btn btn-close-white" (click)="delete(proyecto.id)"><i class="fa-solid fa-trash-can"></i></button>                
         </div>
         <br><hr class="col-11">
       </div>
       
     </div>
   </section>
-  <app-modal-proyectos></app-modal-proyectos>
   <app-modal-proyectos-add></app-modal-proyectos-add>
+
+ 
