--- a/src/app/components/sobremi/sobremi.component.html
+++ b/src/app/components/sobremi/sobremi.component.html
@@ -10,13 +10,13 @@
     </div>
       
       <img [src]="persona.banner" alt="banner" width="100%" height="auto" class="rounded-top banner">
-       <!-- Button trigger modal -->
-      <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#bannerModal" class="btn btn-close-white editBanner"><i class="fa-solid fa-pencil"></i></button> 
+      
+      
       <div class="row p-3">
       <div class="col-3">
         <img [src]="persona.img" class="rounded-circle profileImage w-50" alt="profileImage"> 
        <!-- Button trigger modal -->  
-        <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#profileModal" class="btn btn-close-white" ><i class="fa-solid fa-pencil"></i></button>
+        <button type="button" *ngIf="isLogged" routerLink="editPerfil/{{persona.id}}" class="btn btn-close-white" ><i class="fa-solid fa-pencil"></i></button>
         <br>
         <h4 class="nombrePerfil">{{persona.nombre}} {{persona.apellido}}</h4>
         <h5 class="tituloPerfil">{{persona.titulo}}</h5>
@@ -24,14 +24,9 @@
       <div class="col-8 text-md-start">
         <h4 class="sobreMiPerfil">{{persona.sobreMi}}</h4>
       </div>
-      <div class="col-1 p-0">
-        <!-- Button trigger modal -->  
-        <button type="button" *ngIf="isLogged" data-bs-toggle="modal" data-bs-target="#sobreMiModal" class="btn btn-close-white" ><i class="fa-solid fa-pencil"></i></button> <br>
-        <button type="submit" *ngIf="isLogged" class="btn btn-close-white"><i class="fa-solid fa-trash-can"></i></button>
+      <div class="col-1 p-0">        
       </div>
     </div>
   </div>
           </section>
-<app-modal-banner></app-modal-banner>
-<app-modal-perfil></app-modal-perfil>
-<app-modal-sobremi></app-modal-sobremi>
+<!-- <app-modal-perfil></app-modal-perfil> -->
