--- a/src/app/modales/modal-educacion-add/modal-educacion-add.component.html
+++ b/src/app/modales/modal-educacion-add/modal-educacion-add.component.html
@@ -6,24 +6,24 @@
           <h5 class="modal-title" id="exampleModalLabel">Agregar Educación</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="limpiar()"></button>
         </div>
-        <form  [formGroup]="form" (ngSubmit)="form.valid && onCreate()" name="educacionForm"> 
+        <form  [formGroup]="form" (ngSubmit)="onEnviar($event)" name="educacionForm"> 
         <div class="modal-body">
                 <!-- formulario de educación-->
                 <div class="mb-3">
                   <label for="educacionImg" class="form-label">Agregar Logo de Instituto</label>
-                  <input class="form-control" type="url" id="educacionImg" placeholder="URL de imagen" formControlName="imagen" [(ngModel)]="imagen">
+                  <input class="form-control" type="url" id="educacionImg" placeholder="URL de imagen" formControlName="imagen" >
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Agregar Instituto</label>
-                  <input type="text" class="form-control" id="educacionEstudio" formControlName="institucion" placeholder="Nombre nuevo" [(ngModel)]="institucion">
+                  <input type="text" class="form-control" id="educacionEstudio" formControlName="institucion" placeholder="Ingrese Institución" >
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Agregar Url</label>
-                  <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Nombre nuevo" [(ngModel)]="url">
+                  <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Ingrese URL" >
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Agregar Estudio</label>
-                  <input type="text" class="form-control"  id="educacionEstudio" formControlName="estudio" placeholder="Nombre nuevo" [(ngModel)]="estudio" [ngClass]="{'is-invalid': Estudio.errors && Estudio.touched, 'is-valid': !Estudio.errors && Estudio.touched}">
+                  <input type="text" class="form-control"  id="educacionEstudio" formControlName="estudio" placeholder="Nombre nuevo"  [ngClass]="{'is-invalid': Estudio.errors && Estudio.touched, 'is-valid': !Estudio.errors && Estudio.touched}">
                   <div *ngIf="Estudio.errors && Estudio.touched">    
                     <p *ngIf="Estudio.hasError('required')" class="text-danger">
                       El estudio es requerido.
@@ -32,25 +32,28 @@
                 </div>
                 <div class="mb-3">
                   <label for="educacionPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="educacionPeriodoInicio" formControlName="inicio" [(ngModel)]="inicio">
+                  <input type="date" class="form-control" id="educacionPeriodoInicio" formControlName="inicio" >
                 </div>
                 <div class="mb-3">
                   <label for="educacionPeriodoFin" class="form-label">Agregar Periodo Fin</label>
-                  <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" [(ngModel)]="fin">
+                  <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" >
                 </div>
                 <div class="mb-3">
                     <label for="educacionInfo" class="form-label">Agregar Información de Estudio Realizado</label>
-                    <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion" [(ngModel)]="descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea >
+                    <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion"  [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea >
                     <div *ngIf="Descripcion.errors && Descripcion.touched">    
                       <p *ngIf="Descripcion.hasError('required')" class="text-danger">
                         La descripcion es requerida.
                       </p>
                     </div>
                 </div>
+                <div >
+                  <input type="hidden" formControlName="personaid">
+                </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-ligth" (click)="limpiar()">Limpiar</button>
-                <button type="submit" class="btn btnLogin" data-bs-dismiss="modal" >Agregar</button>
+                <button type="submit" class="btn btnLogin">Agregar</button>
               </div>
             </form>
             </div>
