--- a/src/app/modales/modal-educacion/modal-educacion.component.html
+++ b/src/app/modales/modal-educacion/modal-educacion.component.html
@@ -1,39 +1,54 @@
-   <!-- Modal Educación -->
-   <div class="modal fade text-black" id="educacionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+      <!-- formulario edit educación-->
+      <form [formGroup]="form" (ngSubmit)="onEnviar($event)"  name="educacionForm" class="bg-white rounded p-5 seccion"> 
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Editar Educación</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" aria-label="Close" routerLink="/"></button>
         </div>
-        <div class="modal-body">
-            <form name="educacionForm"> 
-                <!-- formulario de educación-->
-                <div class="mb-3">
+          <div  class="modal-body">
+            <input type="hidden" formControlName="id" id="id" [ngModel]="estu.id">
+                  <div class="mb-3">
                   <label for="educacionImg" class="form-label">Modificar Logo de Instituto</label>
-                  <input class="form-control" type="file" id="educacionImg">
+                  <input class="form-control" type="url" id="educacionImg" formControlName="imagen" [ngModel]="estu.imagen">
+                </div>
+                <div class="mb-3">
+                  <label for="educacionEstudio" class="form-label">Agregar Instituto</label>
+                  <input type="text" class="form-control" id="educacionEstudio" formControlName="institucion" placeholder="Nombre nuevo" [ngModel]="estu.institucion">
+                </div>
+                <div class="mb-3">
+                  <label for="educacionEstudio" class="form-label">Agregar Url</label>
+                  <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Nombre nuevo" [ngModel]="estu.url">
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Modificar Estudio</label>
-                  <input type="text" class="form-control" id="educacionEstudio" placeholder="Nombre nuevo">
+                  <input type="text" class="form-control" id="educacionEstudio" formControlName="estudio" placeholder="Nombre nuevo" [ngModel]="estu.estudio" [ngClass]="{'is-invalid': Estudio.errors && Estudio.touched, 'is-valid': !Estudio.errors && Estudio.touched}">
+                  <div *ngIf="Estudio.errors && Estudio.touched">    
+                    <p *ngIf="Estudio.hasError('required')" class="text-danger">
+                      El estudio es requerido.
+                    </p>
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="educacionPeriodoInicio" class="form-label">Modificar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="educacionPeriodoInicio">
+                  <input type="date" class="form-control" id="educacionPeriodoInicio" formControlName="inicio" [ngModel]="estu.inicio">
                 </div>
                 <div class="mb-3">
                   <label for="educacionPeriodoFin" class="form-label">Modificar Periodo Fin</label>
-                  <input type="date" class="form-control" id="educacionPeriodoFin">
+                  <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" [ngModel]="estu.fin">
                 </div>
                 <div class="mb-3">
                     <label for="educacionInfo" class="form-label">Modificar Información de Estudio Realizado</label>
-                    <textarea class="form-control" id="educacionInfo" rows="3"></textarea>
-                </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Guardar</button>
-        </div>
-      </div>
-    </div>
-  </div>
+                    <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion" [ngModel]="estu.descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
+                    <div *ngIf="Descripcion.errors && Descripcion.touched">    
+                      <p *ngIf="Descripcion.hasError('required')" class="text-danger">
+                        La descripcion es requerida.
+                      </p>
+                    </div>
+                  </div>
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btnLogin">Guardar</button>
+              </div>
+            </div>
+          </form>
+   
