--- a/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
+++ b/src/app/modales/modal-experiencia-add/modal-experiencia-add.component.html
@@ -4,53 +4,61 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="experienciaModalAdd">Agregar Experiencia</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="limpiar()"></button>
         </div>
+        <form  [formGroup]="form" (ngSubmit)="onEnviar($event)" name="experienciaFormAdd"> 
+            <!-- formulario de experiencia-->
         <div class="modal-body">
-            <form  #f="ngForm" (ngSubmit)="onCreate()" novalidate name="experienciaFormAdd"> 
-                <!-- formulario de experiencia-->
                 <div class="mb-3">
                   <label for="imagen" class="form-label">Agregar Logo de Empresa</label>
-                  <input class="form-control" type="url" id="imagen" name="imagen" [(ngModel)]="form.imagen" placeholder="Ingrese URL">
-                </div>
-                <div class="mb-3">
-                  <label for="url" class="form-label">Agregar URL de Empresa</label>
-                  <input type="url" class="form-control" id="url" name="url" [(ngModel)]="form.url" placeholder="Nueva URL">
+                  <input class="form-control" type="url" id="imagen" name="imagen" formControlName="imagen" placeholder="Ingrese URL">
                 </div>
                 <div class="mb-3">
                   <label for="empresa" class="form-label">Agregar Empresa</label>
-                  <input type="text" class="form-control" id="empresa" name="empresa" [(ngModel)]="form.empresa" required placeholder="Empresa nueva">
+                  <input type="text" class="form-control" id="empresa" name="empresa" formControlName="empresa" placeholder="Empresa nueva">
+                </div>
+                <div class="mb-3">
+                  <label for="url" class="form-label">Agregar URL de Empresa</label>
+                  <input type="url" class="form-control" id="url" name="url" formControlName="url" placeholder="Ingrese URL" >
                 </div>
                 <div class="mb-3">
                   <label for="puesto" class="form-label">Agregar Cargo</label>
-                  <input type="text" class="form-control" id="puesto" name="puesto" [(ngModel)]="form.puesto" required placeholder="Nombre nuevo" #puesto="ngModel" [ngClass]="{ 'is-invalid': f.submitted && puesto.errors }">
-                </div>
-                <div *ngIf="f.submitted && puesto.errors" class="invalid-feedback">
-                  <div *ngIf="puesto.errors['required']">El nombre es requerido</div>
+                  <input type="text" class="form-control" id="puesto" name="puesto"  placeholder="Ingrese cargo" formControlName="puesto" [ngClass]="{'is-invalid': Puesto.errors && Puesto.touched, 'is-valid': !Puesto.errors && Puesto.touched}">
+                  <div *ngIf="Puesto.errors && Puesto.touched" class="invalid-feedback">
+                    <div *ngIf="Puesto.errors['required']">El nombre es requerido</div>
+                  </div>
                 </div>
                 <div class="mb-3">
                   <label for="inicio" class="form-label">Agregar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="form.inicio">
+                  <input type="date" class="form-control" id="inicio" name="inicio"  formControlName="inicio">
                 </div>
                 <div class="mb-3">
                   <label for="fin" class="form-label">Agregar Periodo Fin</label>
-                  <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="form.fin"> 
+                  <input type="date" class="form-control" id="fin" name="fin" formControlName="fin"> 
                 </div>
                 <div class="mb-3">
                     <label for="descripcion" class="form-label">Agregar Información de Cargo</label>
-                    <textarea class="form-control" id="descripcion" name="descripcion" [(ngModel)]="form.descripcion" rows="3"></textarea>
+                    <textarea class="form-control" id="descripcion" name="descripcion"  rows="3" formControlName="descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
+                    <div *ngIf="Descripcion.errors && Descripcion.touched">    
+                      <p *ngIf="Descripcion.hasError('required')" class="text-danger">
+                        La descripcion es requerida.
+                      </p>
+                    </div>
                 </div>
                 <div class="form-check form-switch">
                   <label class="form-check-label" for="esTrabajoActual">Es trabajo actual</label>
-                  <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" name="esTrabajoActual" [(ngModel)]="form.esTrabajoActual">
+                  <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" name="esTrabajoActual"  formControlName="esTrabajoActual">
                 </div>
+                <div >
+                  <input type="hidden" formControlName="personaid">
+                </div>
+              </div>
                 <div class="modal-footer">
-                  <button type="button" (click)="onReset(f)" class="btn btn-warning float-right">Reset</button>
-                  <button type="submit" class="btn btnLogin" data-bs-dismiss="modal">Agregar</button>          
+                  <button type="button" class="btn btn-ligth" (click)="limpiar()">Limpiar</button>
+                  <button type="submit" class="btn btnLogin">Agregar</button>          
                 </div>
 
-              </form>
-          </div>
+            </form>
       </div>
     </div>
   </div>
