--- a/src/app/modales/modal-experiencia/modal-experiencia.component.html
+++ b/src/app/modales/modal-experiencia/modal-experiencia.component.html
@@ -1,52 +1,58 @@
- <!-- Modal Experiencia -->
- <div class="modal fade" id="experienciaModalEd" tabindex="-1" aria-labelledby="experienciaModalEd" aria-hidden="true">
-  <div class="modal-dialog">
+ <!-- Formulario Experiencia -->
+ <form  [formGroup]="form" (ngSubmit)="onEnviar($event)" name="experienciaForm" class="bg-white rounded p-5 seccion"> 
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="experienciaModalEd">Editar Experiencia</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="cerrar()"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" routerLink="/"></button>
       </div>
-      <div class="modal-body">
-        <!-- formulario de experiencia-->
-          <form  #f="ngForm" (ngSubmit)="onUpdate()" novalidate name="experienciaForm"> 
-            <input type="hidden" name="id" id="id">
+  
+            <div class="modal-body">
+            <input type="hidden" formControlName="id" id="id" [ngModel]="experiencia.id">
               <div class="mb-3">
                 <label for="imagen" class="form-label">Editar Logo de Empresa</label>
-                <input class="form-control" type="url" id="imagen" name="imagen" [(ngModel)]="experiencia.imagen" placeholder="Ingrese URL">
+                <input class="form-control" type="url" id="imagen" formControlName="imagen" [ngModel]="experiencia.imagen" >
               </div>
               <div class="mb-3">
                 <label for="url" class="form-label">Editar URL de Empresa</label>
-                <input type="url" class="form-control" id="url" name="url" [(ngModel)]="experiencia.url" placeholder="Nueva URL">
+                <input type="url" class="form-control" id="url" formControlName="url" [ngModel]="experiencia.url" >
               </div>
               <div class="mb-3">
                 <label for="empresa" class="form-label">Editar Empresa</label>
-                <input type="text" class="form-control" id="empresa" name="empresa" [(ngModel)]="experiencia.empresa" required placeholder="Empresa nueva">
+                <input type="text" class="form-control" id="empresa" formControlName="empresa" [ngModel]="experiencia.empresa" placeholder="Empresa nueva">
               </div>
               <div class="mb-3">
                 <label for="puesto" class="form-label">Editar Cargo</label>
-                <input type="text" class="form-control" id="puesto" name="puesto" [(ngModel)]="experiencia.puesto" required placeholder="Nombre nuevo">
+                <input type="text" class="form-control" id="puesto" formControlName="puesto" [ngModel]="experiencia.puesto"  placeholder="Nombre nuevo" [ngClass]="{'is-invalid': Puesto.errors && Puesto.touched, 'is-valid': !Puesto.errors && Puesto.touched}">
+                <div *ngIf="Puesto.errors && Puesto.touched">    
+                  <p *ngIf="Puesto.hasError('required')" class="text-danger">
+                    El puesto es requerido.
+                  </p>
+                </div>
               </div>
               <div class="mb-3">
                 <label for="inicio" class="form-label">Editar Periodo Inicio</label>
-                <input type="date" class="form-control" id="inicio" name="inicio" [(ngModel)]="experiencia.inicio">
+                <input type="date" class="form-control" id="inicio" formControlName="inicio" [ngModel]="experiencia.inicio">
               </div>
               <div class="mb-3">
                 <label for="fin" class="form-label">Editar Periodo Fin</label>
-                <input type="date" class="form-control" id="fin" name="fin" [(ngModel)]="experiencia.fin"> 
+                <input type="date" class="form-control" id="fin" formControlName="fin" [ngModel]="experiencia.fin"> 
               </div>
               <div class="mb-3">
                   <label for="descripcion" class="form-label">Editar Información de Cargo</label>
-                  <textarea class="form-control" id="descripcion" name="descripcion" [(ngModel)]="experiencia.descripcion" rows="3"></textarea>
-              </div>
+                  <textarea class="form-control" id="descripcion" formControlName="descripcion" [ngModel]="experiencia.descripcion" rows="3" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
+                  <div *ngIf="Descripcion.errors && Descripcion.touched">    
+                    <p *ngIf="Descripcion.hasError('required')" class="text-danger">
+                      La descripcion es requerida.
+                    </p>
+                  </div>
+                </div>
               <div class="form-check form-switch">
                 <label class="form-check-label" for="esTrabajoActual">Editar Es trabajo actual</label>
-                <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" name="esTrabajoActual" [(ngModel)]="experiencia.esTrabajoActual">
+                <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" formControlName="esTrabajoActual" [ngModel]="experiencia.esTrabajoActual">
               </div>
+            </div>
               <div class="modal-footer">
-                <button type="submit" class="btn btnLogin" data-bs-dismiss="modal">Guardar</button>          
+                <button type="submit" class="btn btnLogin">Guardar</button>          
               </div>
-            </form>
-        </div>
-    </div>
-  </div>
-</div>
+            </div>          
+      </form>
