--- a/src/app/modales/modal-proyectos-add/modal-proyectos-add.component.html
+++ b/src/app/modales/modal-proyectos-add/modal-proyectos-add.component.html
@@ -4,36 +4,55 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Agregar Proyecto</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="limpiar()"></button>
         </div>
-        <div class="modal-body">
-            <form name="proyectosForm"> 
-                <!-- formulario de proyectos-->
-                <div class="mb-3">
-                  <label for="proyectoImg" class="form-label">Agregar Logo de Proyecto</label>
-                  <input class="form-control" type="file" id="proyectoImg">
-                </div>
-                <div class="mb-3">
-                  <label for="proyectoNombre" class="form-label">Agregar Nombre de Proyecto</label>
-                  <input type="text" class="form-control" id="proyectoNombre" placeholder="Nombre nuevo">
-                </div>
-                <div class="mb-3">
-                  <label for="proyectoPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="proyectoPeriodoInicio">
-                </div>
-                <div class="mb-3">
-                  <label for="proyectoPeriodoFin" class="form-label">Agregar Periodo Fin</label>
-                  <input type="date" class="form-control" id="proyectoPeriodoFin">
-                </div>
-                <div class="mb-3">
-                    <label for="proyectoInfo" class="form-label">Agregar Información de Proyecto Realizado</label>
-                    <textarea class="form-control" id="proyectoInfo" rows="3"></textarea>
-                </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Agregar</button>
-        </div>
-      </div>
+          <form [formGroup]="form" (ngSubmit)="onEnviar($event)" name="proyectosForm"> 
+            <div class="modal-body">
+                    <!-- formulario de educación-->
+                    <div class="mb-3">
+                      <label for="educacionImg" class="form-label">Agregar Imagen de Proyecto</label>
+                      <input class="form-control" type="url" id="educacionImg" placeholder="URL de imagen" formControlName="imagen">
+                    </div>
+                    
+                    <div class="mb-3">
+                      <label for="educacionEstudio" class="form-label">Agregar Url</label>
+                      <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Ingrese URL">
+                    </div>
+                    <div class="mb-3">
+                      <label for="educacionEstudio" class="form-label">Agregar Proyecto <span class="text-danger">*</span></label>
+                      <input type="text" class="form-control"  id="educacionEstudio" formControlName="proyecto" placeholder="Nombre nuevo" [ngClass]="{'is-invalid': Proyecto.errors && Proyecto.touched, 'is-valid': !Proyecto.errors && Proyecto.touched}">
+                      <div *ngIf="Proyecto.errors && Proyecto.touched">    
+                        <p *ngIf="Proyecto.hasError('required')" class="text-danger">
+                          El nombre del proyecto es requerido.
+                        </p>
+                      </div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="educacionPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
+                      <input type="date" class="form-control" id="educacionPeriodoInicio" formControlName="inicio">
+                    </div>
+                    <div class="mb-3">
+                      <label for="educacionPeriodoFin" class="form-label">Agregar Periodo Fin</label>
+                      <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" >
+                    </div>
+                    <div class="mb-3">
+                        <label for="educacionInfo" class="form-label">Agregar Información de Estudio Realizado <span class="text-danger">*</span></label>
+                        <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea >
+                        <div *ngIf="Descripcion.errors && Descripcion.touched">    
+                          <p *ngIf="Descripcion.hasError('required')" class="text-danger">
+                            La descripcion es requerida.
+                          </p>
+                        </div>
+                    </div>
+                    <div >
+                      <input type="hidden" formControlName="personaid" >
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-ligth" (click)="limpiar()">Limpiar</button>
+                    <button type="submit" class="btn btnLogin" >Agregar</button>
+                  </div>                
+              </form>
+              </div>
     </div>
   </div>
