--- a/src/app/modales/modal-proyectos/modal-proyectos.component.html
+++ b/src/app/modales/modal-proyectos/modal-proyectos.component.html
@@ -1,39 +1,54 @@
- <!-- Modal Proyectos -->
- <div class="modal fade" id="proyectosModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+ <!-- Formulario Edit Proyectos -->
+ <form [formGroup]="form" (ngSubmit)="onEnviar($event)" name="proyectosFormEdit" class="bg-white rounded p-5 seccion"> 
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">Editar Proyecto</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-            <form name="proyectosForm"> 
-                <!-- formulario de proyectos-->
+              <div class="modal-body">
+                <div >
+                  <input type="hidden" formControlName="id" [ngModel]="proye.id" id="">
+                </div>
                 <div class="mb-3">
-                  <label for="proyectoImg" class="form-label">Modificar Logo de Proyecto</label>
-                  <input class="form-control" type="file" id="proyectoImg">
+                  <label for="proyectoImg" class="form-label">Modificar Imagen de Proyecto</label>
+                  <input class="form-control" type="url" id="educacionImg" placeholder="URL de imagen" formControlName="imagen" [ngModel]="proye.imagen">
+                </div>
+                <div class="mb-3">
+                  <label for="educacionEstudio" class="form-label">Modificar Url</label>
+                  <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Ingrese URL" [ngModel]="proye.url">
                 </div>
                 <div class="mb-3">
                   <label for="proyectoNombre" class="form-label">Modificar Nombre de Proyecto</label>
-                  <input type="text" class="form-control" id="proyectoNombre" placeholder="Nombre nuevo">
+                  <input type="text" class="form-control"  id="educacionEstudio" formControlName="proyecto" placeholder="Nombre nuevo" [ngModel]="proye.proyecto" [ngClass]="{'is-invalid': Proyecto.errors && Proyecto.touched, 'is-valid': !Proyecto.errors && Proyecto.touched}">
+                      <div *ngIf="Proyecto.errors && Proyecto.touched">    
+                        <p *ngIf="Proyecto.hasError('required')" class="text-danger">
+                          El nombre del proyecto es requerido.
+                        </p>
+                      </div>
                 </div>
                 <div class="mb-3">
                   <label for="proyectoPeriodoInicio" class="form-label">Modificar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="proyectoPeriodoInicio">
+                  <input type="date" class="form-control" id="educacionPeriodo-inicio" formControlName="inicio" [ngModel]="proye.inicio">
                 </div>
                 <div class="mb-3">
                   <label for="proyectoPeriodoFin" class="form-label">Modificar Periodo Fin</label>
-                  <input type="date" class="form-control" id="proyectoPeriodoFin">
+                  <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" [ngModel]="proye.fin">
                 </div>
                 <div class="mb-3">
                     <label for="proyectoInfo" class="form-label">Modificar Información de Proyecto Realizado</label>
-                    <textarea class="form-control" id="proyectoInfo" rows="3"></textarea>
+                    <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion" [ngModel]="proye.descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea >
+                      <div *ngIf="Descripcion.errors && Descripcion.touched">    
+                        <p *ngIf="Descripcion.hasError('required')" class="text-danger">
+                          La descripcion es requerida.
+                        </p>
+                      </div>
                 </div>
-            </form>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btnLogin">Guardar</button>
-        </div>
-      </div>
-    </div>
-  </div>
+                <div >
+                  <input type="hidden" formControlName="personaid" [ngModel]="proye.personaid" id="">
+                </div>
+              </div>
+              <div class="modal-footer">
+                <button type="submit" class="btn btnLogin">Guardar</button>
+              </div>
+            </div>
+          </form>
