pruebas con firebase

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,13 +2,13 @@
     <div class="seccion rounded shadow-sm p-3"  [ngClass]="{fondouser : isLogged}">
   <div class="row">
       <div class="col-9 text-white">
-      <h6 >© Copyright - {{perso.nombre}} {{perso.apellido}} - Proyecto Integrador</h6>
+      <h6 >© Copyright - {{perso?.nombre}} {{perso?.apellido}} - Proyecto Integrador</h6>
     </div>
   <div class="col-3 d-flex justify-content-end">
     
-      <a href="download/../assets/documents/cvCuevas.pdf" [download]="perso.curriculum"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button></a>
+      <a href="download/../assets/documents/cvCuevas.pdf" [download]="perso?.curriculum"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-download"></i></button></a>
 
-      <a href="mailto:{{perso.email}}?Subject=Consulta%20oportunidad%20laboral%20vía%20Portfolio%20Web"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-envelope"></i></button></a>
+      <a href="mailto:{{perso?.email}}?Subject=Consulta%20oportunidad%20laboral%20vía%20Portfolio%20Web"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-envelope"></i></button></a>
 
       <a href="#top"><button type="button" class="btn btn-close-white"><i class="fa-solid fa-arrow-turn-up"></i></button></a>
 
