--- a/src/app/modales/modal-educacion/modal-educacion.component.html
+++ b/src/app/modales/modal-educacion/modal-educacion.component.html
@@ -6,22 +6,22 @@
           <button type="button" class="btn-close" aria-label="Close" routerLink="/"></button>
         </div>
           <div  class="modal-body">
-            <input type="hidden" formControlName="id" id="id" [ngModel]="estu.id">
+            <input type="hidden" formControlName="id" [ngModel]="estu.id">
                   <div class="mb-3">
                   <label for="educacionImg" class="form-label">Modificar Logo de Instituto</label>
-                  <input class="form-control" type="url" id="educacionImg" formControlName="imagen" [ngModel]="estu.imagen">
+                  <input class="form-control" type="url"  formControlName="imagen" [ngModel]="estu.imagen">
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Agregar Instituto</label>
-                  <input type="text" class="form-control" id="educacionEstudio" formControlName="institucion" placeholder="Nombre nuevo" [ngModel]="estu.institucion">
+                  <input type="text" class="form-control"  formControlName="institucion" placeholder="Nombre nuevo" [ngModel]="estu.institucion">
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Agregar Url</label>
-                  <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Nombre nuevo" [ngModel]="estu.url">
+                  <input type="url" class="form-control"  formControlName="url" placeholder="Nombre nuevo" [ngModel]="estu.url">
                 </div>
                 <div class="mb-3">
                   <label for="educacionEstudio" class="form-label">Modificar Estudio</label>
-                  <input type="text" class="form-control" id="educacionEstudio" formControlName="estudio" placeholder="Nombre nuevo" [ngModel]="estu.estudio" [ngClass]="{'is-invalid': Estudio.errors && Estudio.touched, 'is-valid': !Estudio.errors && Estudio.touched}">
+                  <input type="text" class="form-control" formControlName="estudio" placeholder="Nombre nuevo" [ngModel]="estu.estudio" [ngClass]="{'is-invalid': Estudio.errors && Estudio.touched, 'is-valid': !Estudio.errors && Estudio.touched}">
                   <div *ngIf="Estudio.errors && Estudio.touched">    
                     <p *ngIf="Estudio.hasError('required')" class="text-danger">
                       El estudio es requerido.
@@ -30,15 +30,15 @@
                 </div>
                 <div class="mb-3">
                   <label for="educacionPeriodoInicio" class="form-label">Modificar Periodo Inicio</label>
-                  <input type="date" class="form-control" id="educacionPeriodoInicio" formControlName="inicio" [ngModel]="estu.inicio">
+                  <input type="date" class="form-control" formControlName="inicio" [ngModel]="estu.inicio">
                 </div>
                 <div class="mb-3">
                   <label for="educacionPeriodoFin" class="form-label">Modificar Periodo Fin</label>
-                  <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" [ngModel]="estu.fin">
+                  <input type="date" class="form-control"  formControlName="fin" [ngModel]="estu.fin">
                 </div>
                 <div class="mb-3">
                     <label for="educacionInfo" class="form-label">Modificar Información de Estudio Realizado</label>
-                    <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion" [ngModel]="estu.descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
+                    <textarea class="form-control"  rows="3" formControlName="descripcion" [ngModel]="estu.descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
                     <div *ngIf="Descripcion.errors && Descripcion.touched">    
                       <p *ngIf="Descripcion.hasError('required')" class="text-danger">
                         La descripcion es requerida.
