--- a/src/app/modales/modal-experiencia/modal-experiencia.component.html
+++ b/src/app/modales/modal-experiencia/modal-experiencia.component.html
@@ -7,22 +7,22 @@
       </div>
   
             <div class="modal-body">
-            <input type="hidden" formControlName="id" id="id" [ngModel]="experiencia.id">
+            <input type="hidden" formControlName="id"  [ngModel]="experiencia.id">
               <div class="mb-3">
                 <label for="imagen" class="form-label">Editar Logo de Empresa</label>
-                <input class="form-control" type="url" id="imagen" formControlName="imagen" [ngModel]="experiencia.imagen" >
+                <input class="form-control" type="url" formControlName="imagen" [ngModel]="experiencia.imagen" >
               </div>
               <div class="mb-3">
                 <label for="url" class="form-label">Editar URL de Empresa</label>
-                <input type="url" class="form-control" id="url" formControlName="url" [ngModel]="experiencia.url" >
+                <input type="url" class="form-control" formControlName="url" [ngModel]="experiencia.url" >
               </div>
               <div class="mb-3">
                 <label for="empresa" class="form-label">Editar Empresa</label>
-                <input type="text" class="form-control" id="empresa" formControlName="empresa" [ngModel]="experiencia.empresa" placeholder="Empresa nueva">
+                <input type="text" class="form-control"  formControlName="empresa" [ngModel]="experiencia.empresa" placeholder="Empresa nueva">
               </div>
               <div class="mb-3">
                 <label for="puesto" class="form-label">Editar Cargo</label>
-                <input type="text" class="form-control" id="puesto" formControlName="puesto" [ngModel]="experiencia.puesto"  placeholder="Nombre nuevo" [ngClass]="{'is-invalid': Puesto.errors && Puesto.touched, 'is-valid': !Puesto.errors && Puesto.touched}">
+                <input type="text" class="form-control"  formControlName="puesto" [ngModel]="experiencia.puesto"  placeholder="Nombre nuevo" [ngClass]="{'is-invalid': Puesto.errors && Puesto.touched, 'is-valid': !Puesto.errors && Puesto.touched}">
                 <div *ngIf="Puesto.errors && Puesto.touched">    
                   <p *ngIf="Puesto.hasError('required')" class="text-danger">
                     El puesto es requerido.
@@ -31,15 +31,15 @@
               </div>
               <div class="mb-3">
                 <label for="inicio" class="form-label">Editar Periodo Inicio</label>
-                <input type="date" class="form-control" id="inicio" formControlName="inicio" [ngModel]="experiencia.inicio">
+                <input type="date" class="form-control"  formControlName="inicio" [ngModel]="experiencia.inicio">
               </div>
               <div class="mb-3">
                 <label for="fin" class="form-label">Editar Periodo Fin</label>
-                <input type="date" class="form-control" id="fin" formControlName="fin" [ngModel]="experiencia.fin"> 
+                <input type="date" class="form-control"  formControlName="fin" [ngModel]="experiencia.fin"> 
               </div>
               <div class="mb-3">
                   <label for="descripcion" class="form-label">Editar Información de Cargo</label>
-                  <textarea class="form-control" id="descripcion" formControlName="descripcion" [ngModel]="experiencia.descripcion" rows="3" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
+                  <textarea class="form-control"  formControlName="descripcion" [ngModel]="experiencia.descripcion" rows="3" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea>
                   <div *ngIf="Descripcion.errors && Descripcion.touched">    
                     <p *ngIf="Descripcion.hasError('required')" class="text-danger">
                       La descripcion es requerida.
@@ -48,7 +48,7 @@
                 </div>
               <div class="form-check form-switch">
                 <label class="form-check-label" for="esTrabajoActual">Editar Es trabajo actual</label>
-                <input class="form-check-input" type="checkbox" role="switch" id="esTrabajoActual" formControlName="esTrabajoActual" [ngModel]="experiencia.esTrabajoActual">
+                <input class="form-check-input" type="checkbox" role="switch" formControlName="esTrabajoActual" [ngModel]="experiencia.esTrabajoActual">
               </div>
             </div>
               <div class="modal-footer">
