--- a/src/app/modales/modal-habilidades/modal-habilidades.component.html
+++ b/src/app/modales/modal-habilidades/modal-habilidades.component.html
@@ -7,10 +7,10 @@
         </div>
         <div class="modal-body">
             <div class="modal-body">
-              <input type="hidden" formControlName="id" id="id" [ngModel]="habi.id">
+              <input type="hidden" formControlName="id" [ngModel]="habi.id">
                     <div class="mb-3">
                       <label for="habilidadNombre" class="form-label">ModificarHabilidad</label>
-                      <input type="text" class="form-control" id="habilidadNombre" placeholder="Editar nombre" formControlName="habilidad" [ngModel]="habi.habilidad" [ngClass]="{'is-invalid': Habilidad.errors && Habilidad.touched, 'is-valid': !Habilidad.errors && Habilidad.touched}">
+                      <input type="text" class="form-control"  placeholder="Editar nombre" formControlName="habilidad" [ngModel]="habi.habilidad" [ngClass]="{'is-invalid': Habilidad.errors && Habilidad.touched, 'is-valid': !Habilidad.errors && Habilidad.touched}">
                       <div *ngIf="Habilidad.errors && Habilidad.touched">    
                         <p *ngIf="Habilidad.hasError('required')" class="text-danger">
                           La habilidad es requerida.
@@ -20,7 +20,7 @@
     
                     <div>
                       <label for="habilidadPorcentaje" class="form-label">ModificarPorcentaje de Manejo (Escala 0-100)</label>
-                      <input type="number" min="0" max="100" id="habilidadPorcentaje" formControlName="porcentaje" [ngModel]="habi.porcentaje" [ngClass]="{'is-invalid': Porcentaje.errors && Porcentaje.touched, 'is-valid': !Porcentaje.errors && Porcentaje.touched}">
+                      <input type="number" min="0" max="100" formControlName="porcentaje" [ngModel]="habi.porcentaje" [ngClass]="{'is-invalid': Porcentaje.errors && Porcentaje.touched, 'is-valid': !Porcentaje.errors && Porcentaje.touched}">
                       <div *ngIf="Porcentaje.errors && Porcentaje.touched">    
                         <p *ngIf="Porcentaje.hasError('required')" class="text-danger">
                           El porcentaje es requerido.
