--- a/src/app/modales/modal-proyectos-add/modal-proyectos-add.component.html
+++ b/src/app/modales/modal-proyectos-add/modal-proyectos-add.component.html
@@ -11,16 +11,16 @@
                     <!-- formulario de educación-->
                     <div class="mb-3">
                       <label for="educacionImg" class="form-label">Agregar Imagen de Proyecto</label>
-                      <input class="form-control" type="url" id="educacionImg" placeholder="URL de imagen" formControlName="imagen">
+                      <input class="form-control" type="url"  placeholder="URL de imagen" formControlName="imagen">
                     </div>
                     
                     <div class="mb-3">
                       <label for="educacionEstudio" class="form-label">Agregar Url</label>
-                      <input type="url" class="form-control" id="educacionEstudio" formControlName="url" placeholder="Ingrese URL">
+                      <input type="url" class="form-control"  formControlName="url" placeholder="Ingrese URL">
                     </div>
                     <div class="mb-3">
                       <label for="educacionEstudio" class="form-label">Agregar Proyecto <span class="text-danger">*</span></label>
-                      <input type="text" class="form-control"  id="educacionEstudio" formControlName="proyecto" placeholder="Nombre nuevo" [ngClass]="{'is-invalid': Proyecto.errors && Proyecto.touched, 'is-valid': !Proyecto.errors && Proyecto.touched}">
+                      <input type="text" class="form-control"   formControlName="proyecto" placeholder="Nombre nuevo" [ngClass]="{'is-invalid': Proyecto.errors && Proyecto.touched, 'is-valid': !Proyecto.errors && Proyecto.touched}">
                       <div *ngIf="Proyecto.errors && Proyecto.touched">    
                         <p *ngIf="Proyecto.hasError('required')" class="text-danger">
                           El nombre del proyecto es requerido.
@@ -29,15 +29,15 @@
                     </div>
                     <div class="mb-3">
                       <label for="educacionPeriodoInicio" class="form-label">Agregar Periodo Inicio</label>
-                      <input type="date" class="form-control" id="educacionPeriodoInicio" formControlName="inicio">
+                      <input type="date" class="form-control"  formControlName="inicio">
                     </div>
                     <div class="mb-3">
                       <label for="educacionPeriodoFin" class="form-label">Agregar Periodo Fin</label>
-                      <input type="date" class="form-control" id="educacionPeriodoFin" formControlName="fin" >
+                      <input type="date" class="form-control"  formControlName="fin" >
                     </div>
                     <div class="mb-3">
                         <label for="educacionInfo" class="form-label">Agregar Información de Estudio Realizado <span class="text-danger">*</span></label>
-                        <textarea class="form-control" id="educacionInfo" rows="3" formControlName="descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea >
+                        <textarea class="form-control"  rows="3" formControlName="descripcion" [ngClass]="{'is-invalid': Descripcion.errors && Descripcion.touched, 'is-valid': !Descripcion.errors && Descripcion.touched}"></textarea >
                         <div *ngIf="Descripcion.errors && Descripcion.touched">    
                           <p *ngIf="Descripcion.hasError('required')" class="text-danger">
                             La descripcion es requerida.
