--- a/src/app/modales/modal-red-add/modal-red-add.component.html
+++ b/src/app/modales/modal-red-add/modal-red-add.component.html
@@ -12,7 +12,7 @@
                 
                 <div class="mb-3">
                   <label for="RedNombre" class="form-label">Agregar Nombre</label>
-                  <input type="text" class="form-control" id="RedNombre" placeholder="Nombre nuevo" formControlName="nombre" [ngClass]="{'is-invalid': Nombre.errors && Nombre.touched, 'is-valid': !Nombre.errors && Nombre.touched}">
+                  <input type="text" class="form-control"  placeholder="Nombre nuevo" formControlName="nombre" [ngClass]="{'is-invalid': Nombre.errors && Nombre.touched, 'is-valid': !Nombre.errors && Nombre.touched}">
                   <div *ngIf="Nombre.errors && Nombre.touched">    
                     <p *ngIf="Nombre.hasError('required')" class="text-danger">
                       El nombre es requerido.
@@ -22,7 +22,7 @@
 
                 <div class="mb-3">
                     <label for="RedUrl" class="form-label">Agregar Url</label>
-                    <input type="text" class="form-control" id="RedUrl" placeholder="Url nueva" formControlName="url" [ngClass]="{'is-invalid': Url.errors && Url.touched, 'is-valid': !Url.errors && Url.touched}">
+                    <input type="text" class="form-control"  placeholder="Url nueva" formControlName="url" [ngClass]="{'is-invalid': Url.errors && Url.touched, 'is-valid': !Url.errors && Url.touched}">
                     <div *ngIf="Url.errors && Url.touched">    
                       <p *ngIf="Url.hasError('required')" class="text-danger">
                         La URL es requerida.
@@ -33,7 +33,7 @@
 
                   <div class="mb-3">
                     <label for="RedIcono" class="form-label">Agregar Url</label>
-                    <input type="text" class="form-control" id="RedIcono" placeholder="Ej: fa-regular fa-hat-santa" formControlName="icono" [ngClass]="{'is-invalid': Icono.errors && Icono.touched, 'is-valid': !Icono.errors && Icono.touched}">
+                    <input type="text" class="form-control" placeholder="Ej: fa-regular fa-hat-santa" formControlName="icono" [ngClass]="{'is-invalid': Icono.errors && Icono.touched, 'is-valid': !Icono.errors && Icono.touched}">
                     <div *ngIf="Icono.errors && Icono.touched">    
                       <p *ngIf="Icono.hasError('required')" class="text-danger">
                         El icono es requerido.
